--- a/django/mushup/templates/login/index.html
+++ b/django/mushup/templates/login/index.html
@@ -1,87 +1,79 @@
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <title>Django OpenID Example Consumer</title>
-    <style type="text/css">
-    div.message {
-        background: #9f9;
-        padding: 0.5em;
-        margin-top: 0.5em;
-        margin-bottom: 0.5em;
-        border: 1px solid #555;
-        font-weight: bold;
+<head>
+{% if url %}
+<meta http-equiv="Refresh" content="5; URL=/">
+{% endif %}
+<title>Mushup! OpenID Authentication</title>
+<link rel="stylesheet" href="http://static.mushup.foolip.org/style.css" />
+<style type="text/css">
+    body > div {
+        margin: 100px auto;
+        max-width: 700px;
+        padding: .5em;
     }
 
-    div.error {
-        background: #f99;
-        padding: 0.5em;
-        margin-top: 0.5em;
-        margin-bottom: 0.5em;
-        border: 1px solid #555;
-        font-weight: bold;
+    body > div > p {
+        margin-bottom: 0;
     }
 
-    div.box {
-        background: #eee;
+    .success, .cancel, .error {
         border: 1px solid black;
-        padding: 1em;
+        font-weight: bold;
     }
-    </style>
-  </head>
-  <body>
 
-  <div class="box">
+    .success {
+        background: #9f9;
+    }
 
-  <p>
-    This is an example consumer built for the Django framework.  Enter
-    an OpenID in the box below.
-  </p>
+    .cancel {
+        background: #ccc;
+    }
 
+    .error {
+        background: #f99;
+    }
+
+    .login {
+        text-align: center;
+    }
+
+    .login p {
+        font-size: smaller;
+    }
+
+    .login input[type=text] {
+        height: 18px;
+        padding-left: 20px;
+	border: 1px solid #ccc;
+        background: white url("http://openid.net/wp-content/uploads/2007/10/openid_small_logo.png") no-repeat 1px 1px;
+    }
+</style>
+<script type="text/javascript" src="http://yui.yahooapis.com/2.5.1/build/yahoo/yahoo-min.js"></script> 
+<script type="text/javascript" src="http://yui.yahooapis.com/2.5.1/build/dom/dom-min.js"></script>  
+<script type="text/javascript" src="http://yui.yahooapis.com/2.5.1/build/event/event-min.js" ></script>
+<script type="text/javascript" src="http://static.mushup.foolip.org/input.js" ></script>
+</head>
+<body>
   {% if error %}
     <div class="error">{{ error|escape }}</div>
   {% endif %}
 
   {% if url %}
-    <div class="message">
+    <div class="success">
       OpenID authentication succeeded; you authenticated as
         <a href="{{ url }}">{{ url|escape }}</a>.
 
       <p>
-      {% if sreg %}
-        Simple Registration data returned:
-
-        <ul>
-        {% for pair in sreg %}
-          <li>{{ pair.0 }}: {{ pair.1 }}</li>
-        {% endfor %}
-        </ul>
-      {% else %}
-        The server returned no Simple Registration data.
-      {% endif %}
-
-      {% if pape %}
-
-        {% if pape.auth_policies %}
-          An authentication policy response contained these policies:
-
-          <ul>
-          {% for uri in pape.auth_policies %}
-            <li><tt>{{ uri }}</tt></li>
-          {% endfor %}
-          </ul>
-        {% else %}
-          An authentication policy response was returned, but no
-          policies were enforced by the server.
-        {% endif %}
-      {% else %}
-        The server returned no authentication policy data (PAPE).
-      {% endif %}
+	You can now return to <a href="/">Mushup!</a>, or wait to be automatically redirected.
       </p>
     </div>
   {% endif %}
 
-  {% if message %}
-    <div class="message">
-      {{ message|escape }}
+  {% if cancel %}
+    <div class="cancel">
+      {{ cancel|escape }}
+      <p>Try another OpenID or return anonymously to <a href="/">Mushup!</a></p>
     </div>
   {% endif %}
 
@@ -91,31 +83,15 @@
     </div>
   {% endif %}
 
-  <form method="post" action="{{ consumer_url }}">
-    <input type="text" size="40" name="openid_identifier" />
-
-    <p>
-    Request these authentication policies
-      (<a href="http://openid.net/specs/openid-provider-authentication-policy-extension-1_0-01.html">PAPE</a>):
-
-    <table>
-      {% for pair in pape_policies %}
-      <tr>
-        <td><input type="checkbox" name="policy_{{ pair.0 }}" id="id_policy_{{ pair.0 }}" /></td>
-        <td>
-          <label for="id_policy_{{ pair.0 }}"><tt>
-            {{ pair.1 }}
-          </tt></label>
-        </td>
-      </tr>
-      {% endfor %}
-    </table>
-    </p>
-
-    <input type="submit" value="Begin" />
-  </form>
-
-  </div>
-
-  </body>
+  {% if not url %}
+    <div class="login">
+      <form method="post" action="{{ consumer_url }}">
+	<input type="text" size="40" name="openid_identifier"
+	       class="cleardefault" value="Enter your OpenID here..."/>
+	<input type="submit" value="Begin" />
+      </form>
+      <p><a href="http://openid.net/get/">How do I get an OpenID?</a></p>
+    </div>
+  {% endif %}
+</body>
 </html>
