--- a/django/mushup/static/style.css
+++ b/django/mushup/static/style.css
@@ -1,33 +1,108 @@
+/* general */
 body {
-    padding: 8px;
     color: black;
     background: white;
     font-family: sans-serif;
 }
 
 a {
-    color: #e00;
-}
-
-h1 {
-    font-variant: small-caps;
-    font-weight: bold;
-    float: left;
-    margin: 0;
-}
-
-#user {
-    font-size: 93%;
-    float: right;
-}
-
-#content {
-    font-size: 108%;
-    clear: both;
-    padding-top: 20px;
+    color: #d00;
 }
 
 input[type=text] {
     border: 1px solid #ccc;
-    padding: 1px;
+    padding: 1px 2px;
+}
+
+select {
+    border: 1px solid #ccc;
+}
+
+/* header */
+
+#header {
+    position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	border-bottom: 1px dotted #ccc;
+	padding: 4px 8px;
+}
+
+h1 {
+    font-size: 108%;
+    font-variant: small-caps;
+    font-weight: bold;
+    float: left;
+	line-height: 18px;
+}
+
+h1 a {
+	color: black;
+	text-decoration: none;
+}
+
+#search {
+    float: left;
+	padding-left: 50px;
+}
+
+#user {
+    float: right;
+	padding-right: 4px;
+	line-height: 18px;
+}
+
+/* footer */
+
+#footer {
+    position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	border-top: 1px dotted #ccc;
+	font-size: 93%;
+	padding: 4px;
+}
+
+/* content */
+
+#content {
+    position: absolute;
+    left: 8px;
+    right: 8px;
+    top: 30px;
+    bottom: 30px;
+    /*overflow: hidden;*/
+}
+
+/* login */
+
+.login {
+	position: absolute;
+	bottom: 50%;
+	left: 0;
+	right: 0;
+	margin-bottom: -30px;
+    text-align: center;
+}
+
+.login .error {
+    border: 1px solid #ccc;
+    background: #fcc;
+	font-size: 120%;
+	max-width: 500px;
+	margin: 0 auto 50px auto;
+	padding: 8px;
+}
+
+
+.login p {
+	margin-top: 1em;
+}
+
+.login input[type=text] {
+    height: 18px;
+    padding-left: 22px;
+    background: white url("http://openid.net/wp-content/uploads/2007/10/openid_small_logo.png") no-repeat 3px 2px;
 }
