--- a/static/style.css
+++ b/static/style.css
@@ -1,40 +1,38 @@
-/* general */
 body {
-    color: black;
-    background: white;
-    font-family: sans-serif;
+	color: black;
+	background: white;
+	font-family: sans-serif;
 }
 
 a {
-    color: #d00;
+	color: #d00;
 }
 
 input[type=text] {
-    border: 1px solid #ccc;
-    padding: 1px 2px;
+	border: 1px solid #ccc;
+	padding: 1px 2px;
 }
 
 select {
-    border: 1px solid #ccc;
+	border: 1px solid #ccc;
 }
 
-/* header */
-
 #header {
-    position: absolute;
+	position: absolute;
 	left: 0;
 	right: 0;
 	top: 0;
 	border-bottom: 1px dotted #ccc;
 	padding: 4px 8px;
+	height:20px;
+	line-height: 18px;
 }
 
 h1 {
-    font-size: 108%;
-    font-variant: small-caps;
-    font-weight: bold;
-    float: left;
-	line-height: 18px;
+	font-size: 108%;
+	font-variant: small-caps;
+	font-weight: bold;
+	float: left;
 }
 
 h1 a {
@@ -43,40 +41,39 @@ h1 a {
 }
 
 #search {
-    float: left;
+	float: left;
 	padding-left: 50px;
 }
 
 #user {
-    float: right;
+	float: right;
 	padding-right: 4px;
 	line-height: 18px;
 }
 
-/* footer */
-
 #footer {
-    position: absolute;
+	position: absolute;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	border-top: 1px dotted #ccc;
 	font-size: 93%;
 	padding: 4px;
+	height:12px;
+	line-height: 12px;
 }
-
-/* content */
 
 #content {
-    position: absolute;
-    left: 8px;
-    right: 8px;
-    top: 30px;
-    bottom: 30px;
-    /*overflow: hidden;*/
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 29px;
+	bottom: 21px;
+	overflow: auto;
+	padding: 8px;
 }
 
-/* login */
+/* LOGIN */
 
 .login {
 	position: absolute;
@@ -84,13 +81,13 @@ h1 a {
 	left: 0;
 	right: 0;
 	margin-bottom: -30px;
-    text-align: center;
+	text-align: center;
 }
 
 .login .error {
-    border: 1px solid #ccc;
-    background: #fcc;
-	font-size: 120%;
+	border: 1px solid #ccc;
+	background: #fcc;
+	font-size: 123.1%;
 	max-width: 500px;
 	margin: 0 auto 50px auto;
 	padding: 8px;
@@ -102,7 +99,60 @@ h1 a {
 }
 
 .login input[type=text] {
-    height: 18px;
-    padding-left: 22px;
-    background: white url("http://openid.net/wp-content/uploads/2007/10/openid_small_logo.png") no-repeat 3px 2px;
+	height: 18px;
+	padding-left: 22px;
+	background: white url("http://openid.net/wp-content/uploads/2007/10/openid_small_logo.png") no-repeat 3px 2px;
+}
+
+/* AJAX SEARCH */
+
+.loader {
+	background: url("/static/ajax-loader.gif") no-repeat;
+	line-height: 16px;
+	padding-left: 20px;
+	font-weight: bold;
+	color: #999;
+	margin-left: 100px;
+}
+
+.searchResult {
+	padding: 10px 0 10px 0;
+	max-width: 500px;
+	border-top: 2px dotted #ccc;
+	margin-left: 100px;
+}
+
+.searchResult:first-child {
+	padding-top: 0;
+	border-top: none;
+}
+
+.searchResult .top {
+	line-height: 16px;
+}
+
+.searchResult .top img {
+	margin-left: 8px;
+	vertical-align: middle;
+}
+
+.artist .name {
+	font-size: 116%;
+}
+
+.artist .nameHint {
+	font-style: italic;
+}
+
+.searchResult .blurb {
+	margin-left: 10px;
+}
+
+.loading-indicator {
+	padding-left: 16px;
+	display: none;
+}
+
+.loading .loading-indicator {
+	display: inline;
 }
