--- a/static/style.css
+++ b/static/style.css
@@ -40,6 +40,12 @@ h1 a {
 	text-decoration: none;
 }
 
+h2 {
+	font-size: 167%;
+	font-weight: bold;
+	margin-left: 100px;
+}
+
 #search {
 	float: left;
 	padding-left: 50px;
@@ -155,4 +161,17 @@ h1 a {
 
 .loading .loading-indicator {
 	display: inline;
+}
+
+/* ARTIST PAGE */
+.release {
+	 margin-bottom: 5px;
+}
+
+.release img {
+	 border: 1px solid black;
+	 vertical-align: middle;
+	 margin-right: 10px;
+	 max-width: 80px;
+	 max-height: 80px;
 }
